# bss_project

./: CMakeLists.txt  README.md  geojson.cc  geojson.hh  main.cpp
includes/: calculations.cpp  calculations.h
